--- a/index.html
+++ b/index.html
@@ -20,22 +20,19 @@
 
 <body>
     <div class="container">
-        <form class="col-md-6 m-auto py-5">
+        <div class="col-md-6 m-auto py-5">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Enter a location for Weather ...">
+                <input id="search" type="text" class="form-control" placeholder="Enter a location for Weather ...">
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-danger">Search</button>
+                    <button onclick="loadData()" class="btn btn-danger">Search</button>
                 </div>
             </div>
-        </form>
-        <div class="weather-status text-white text-center">
-            <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
-            <h1>Dhaka</h1>
-            <h3><span>38.06</span>&deg;C</h3>
-            <h1 class="lead">Clouds</h1>
+        </div>
+        <div id="weather-status-container" class="weather-status text-white text-center">
+
         </div>
     </div>
-
+    <script src="js/app.js"></script>
 </body>
 
 </html>
