working with weather api

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     <div class="container">
         <div class="col-md-6 m-auto py-5">
             <div class="input-group mb-3">
-                <input id="search" type="text" class="form-control" placeholder="Enter a location for Weather ...">
-                <div class="input-group-append">
-                    <button onclick="loadData()" class="btn btn-danger">Search</button>
-                </div>
+                <form action="">
+                    <div class="input-group-append">
+                        <input id="search" type="text" class="form-control"
+                            placeholder="Enter a location for Weather ...">
+                        <button name="search" onclick="loadData()" class="btn btn-danger">Search</button>
+                    </div>
+                </form>
             </div>
         </div>
         <div id="weather-status-container" class="weather-status text-white text-center">
